--- a/contacts.html
+++ b/contacts.html
@@ -6,7 +6,7 @@
             bottom: 15px;
             border: 3px solid rgb(66, 133, 244);
             height: 20px;
-            width: 170px;
+            width: 280px;
         }
         .relative2{
             position: relative;
@@ -16,7 +16,21 @@
         .button{
             position: absolute;
             top: 120px;
-
+            color: blue;
+            background-color: white;
+            text-align: center;
+            border-radius: 8px;
+            transition-duration: 0.4s;
+            cursor:pointer;
+            padding: 3px 5px;
+            /*font-size: 14px;*/
+        }
+        .button:hover{
+            background-color: rgb(66, 133, 244);
+            color: white;
+        }
+        textarea{
+            resize: none;
         }
     </style>
 <body>
@@ -24,17 +38,17 @@
 <p>What is your name? (First and last)</p>
 
 <div class="relative">
-<textarea rows="1" placeholder="Name" id="Name"></textarea>
+<textarea rows="1" cols="35" resize="none" placeholder="Name" id="Name" class="contacts"></textarea>
 </div>
 
 <div class="relative2">
     <p>What is your email address?</p>
         <div class="relative">
-        <textarea rows="1" placeholder="Email" id="Email"></textarea>
+        <textarea rows="1" cols="35" placeholder="Email" id="Email" class="contacts"></textarea>
         </div>
 </div>
 
-<button id = "b1" class="button" onclick="buttonpress()">save</button>
+<button id = "b1" class="button" onclick="buttonpress()" class="contacts">Save</button>
 
 <script>
     let Namelist = [];
